cinems to cinema

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container nav-content">
             <a href="" class="nav-logo">
                 <img src="img/209-2093453_vue-cinema-logo-vue-cinemas 1.png" alt="">
-                <span class="nav-j-span">CINEMAS</span>
+                <span class="nav-j-span">CINEMA</span>
             </a>
             <ul class="nav-list">
                 <li><a href="#film" class="nav-link">Films</a></li>
